# machine

./: .envrc  .gitattributes  .gitignore  README.md  bashrc.sh  boot  build  build-system  buildkite.yaml  config-usb.nix  config.nix  configuration.nix  default.nix  flake.nix  gc-generations  hardware-configuration.nix  hardware.nix  home-manager.nix  home.nix  install-machine-base.sh  install-nix.sh  install.sh  justfile  packages.nix  remove-nix.sh  setup-wifi.sh  sources.nix  switch  switch-to-configuration  update-hardware  utils.nix  vm.nix
.claude/plans/: refactor.md
.claude/skills/: format-code.md  nixos-workflow.md  update-system.md
.github/workflows/: dev.yaml
components/hardware/: auto.nix  default.nix
nix/: sources.json
nixos-modules/_meta/: default.nix
nixos-modules/audio/: default.nix
nixos-modules/av/: default.nix
scripts/: _nix-build  build-installer  build-system  format  gc-generations  gc-store  rollback  rotate-gpg  rotate-gpg.sh  rotate-ssh  rotate-ssh.sh  switch-to-configuration  update-hardware  with-buildkite-age-key  with-buildkite-age-key.sh
secrets/: aws-config  aws-credentials  buildkite-holdings  buildkite-private.yaml  buildkite-public.yaml  buildkite-token  cachix-auth-token-alejandra  cachix-auth-token-holdings  cloudflared-tunnel  coveralls-kamadorueda-alejandra  coveralls-kamadorueda-nixel  coveralls-kamadorueda-santiago  coveralls-kamadorueda-toros  holdings-deploy-rs-key  machine.yaml  wifi-24f42fdc30  wifi-airuc-secure  wifi-eduroam  wifi-elemerce  wifi-spsetup-2c38
src/: default.nix
test/: pyproject.toml  test.py
(+121 files in other folders)
