[tool.poetry]
name = "xxx"
version = "0.1.0"
description = ""
authors = ["Kevin Amado <kamadorueda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.1.12"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
